# castserver

./: CMakeLists.txt  README.md  command_control.c  command_control.h  config.c  config.h  daemon.c  daemon.h  server.c  server.h  server_detect.c  server_detect.h  server_http.c  server_http.h  server_mutex.c  server_mutex.h  server_receiver.c  server_receiver.h  server_speaker_control.c  server_speaker_control.h  server_speaker_detect.c  server_speaker_detect.h  server_speaker_pusher.c  server_speaker_pusher.h
client/: CMakeLists.txt  client.c  client.h  list_speakers.c  list_speakers.h  pipe.c  pipe.h
command/: command.h  pushwave.c  speakers.c
conf/: castserver.conf  speakers.conf
